# minesweeper

./: .gitignore
control_panel/: CMakeLists.txt  styles.toml
control_panel/src/: camera.cpp  camera.hpp  main.cpp  spin_lock.hpp  state.hpp  ui.cpp  ui.hpp  wire.hpp
control_pannel/: CMakeLists.txt  toml.md
control_pannel/src/: main.cpp
rtsp/: Makefile  compile_commands.json  rtsp  rtsp.c
